# grafel

./: --json-stats  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  graph-stats.json  graph.fb  install.bat  install.ps1  install.sh  wrangler.toml
.cursor/commands/: grafel-consult.md
.cursor/rules/: grafel-personas.mdc
.github/: pull_request_template.md
.github/workflows/: acceptance.yml  test.yml  (+10 more)
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  smoke-graph-settle.mjs  smoke-security-1330.mjs  smoke-topology-detail.mjs  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
design-handoff-2026-05-21/: capture.js
docs/: README.md  RELEASING.md  agent-hosts.md  agent-instructions-draft.md  board-hygiene.md  concepts.md  docgen-llm-mode.md  downstream-release.md  embedding.md  grammar-freshness-audit.md  graph-format.md  install-windows-manual.md  install.md  mcp-tools.md  modes.md  quickstart.md  settings.md  skills.md  sse-endpoints.md  tools.md  treesitter-binding-migration-plan.md  treesitter-cutover-plan.md  troubleshooting.md
fixtures/: manifest.json
internal/extractors/bazel/testdata/workspace/services/billing/: BUILD.bazel
scripts/: bench-mcp-latency.sh  phase-b-bench.sh
site/: .gitignore  404.html  README.md  astro.config.mjs  index.html  package-lock.json  package.json
skills/: README.md
webui-v2/: ARCHITECTURE.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+6330 files in other folders)
