# services/billing BUILD.bazel — billing service targets.
# Used by grafel M6 (issue #2183) Bazel extractor tests.

java_library(
    name = "billing_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//common/utils:string_utils",
        "@maven//:com_google_guava_guava",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "billing_server",
    main_class = "com.example.billing.Main",
    deps = [
        ":billing_lib",
    ],
)

java_test(
    name = "billing_test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":billing_lib",
        "@maven//:junit_junit",
    ],
)
